2006-03-10  Alexis Sukrieh  <sukria@backup-manager.org>

	* Setup an umask 0077 for creating files without world permissions.
	  (closes: #47)
	* Restore the original umask when exiting.

2006-03-10  Alexis Sukrieh	<sukria@backup-manager.org>

	* backup-manager:
	  + Disabled the -u flag, too much problems with the pipe method.
	* lib/backup-methods.sh:
	  + Better layout of the __exec_meta_command.
	  + Doesn't try to commit an archive if none.

2006-03-09  Alexis Sukrieh	<sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + speak about the DVD-RW burning method (with formating).
	  + speak about the DVD method (without formating).
	* doc/common.ent:
	  + New version of backup-manager: 0.7.2
	* doc/user-guide.sgml:
	  + Updates about the burning system.
	  + Interactive mode
	  + DVD / DVD-RW methods
	  + --burn <DATE> new option
	* doc/version.ent:
	  + Revision 1.2
	* lib/burning-methods.sh:
	  + Split the burning method DVD into DVD and DVD-RW so we now have 
	    a burning method that doesn't blank the medium before writing data..

2006-03-09  Rached Ben Mustapha  <rached@benmur.net>

	* lib/upload-methods.sh:
	  + Added support for the ServerAliveInterval ssh option. It is
	  unconditional for now, but we should check if all supported version
	  of ssh support it. This helps when the "building file list" step of
	  rsync takes a loooong time (high I/O load for example), and the
	  connection is closed because of non-activity. It is currently
	  hardcoded to 60s, which seems like a good compromise.

2006-02-08  Alexis Sukrieh  <sukria@backup-manager.org>

	* NEWS:
	  + Release notes for 0.7.1
	* backup-manager.conf.tpl:
	  + default blacklist items: /dev /proc /sys

2006-01-19  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + major rewrite of the code, much more clean and scalable.
	  + dar support
	* t/testlib.sh:
	  + added missing stuff here, for the tests.

2006-01-17  Alexis Sukrieh  <sukria@backup-manager.org>
