@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "BACKUP-MANAGER-UPLOAD 1"
-.TH BACKUP-MANAGER-UPLOAD 1 "2006-03-03" "perl v5.8.8" "backup-manager-upload"
+.TH BACKUP-MANAGER-UPLOAD 1 "2006-02-27" "perl v5.8.8" "backup-manager-upload"
 .SH "NAME"
 backup\-manager\-upload \- Multiprotocol uploader for backup\-manager.
 .SH "SYNOPSIS"
